--- a/src/main/webapp/WEB-INF/templates/dashboard.html
+++ b/src/main/webapp/WEB-INF/templates/dashboard.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="">
-<meta name="author" content="">
-<link rel="icon" href="../../favicon.ico">
-
 <title>Dashboard Template for Bootstrap</title>
 
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
 
 <!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css" />
-
 <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
 <style type="text/css">
 body {
 	padding-top: 70px;
@@ -29,7 +21,6 @@ body {
 #myModal{
 	top:20%;
 }
-
 </style>
 
 </head>
@@ -49,11 +40,11 @@ body {
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#">Dashboard</a></li>
-					<c:if test="${sessionScope.USER_OBJECT ne null}">
-						<li><a href="#">Logged in as:
-								${sessionScope.USER_OBJECT.username}</a></li>
-						<li class="active"><a href="/logout">Logout</a></li>
-					</c:if>
+					<li><a href="#" th:if="${session.USER_OBJECT} != null"
+									th:text="${session.USER_OBJECT.username}">Logged in as : </a></li>
+								<!-- <p th:if="${session.USER_OBJECT} != null" th:text="${session.USER_OBJECT.admin}" />  -->
+								<li class="active" th:if="${session.USER_OBJECT} != null"><a
+									href="/logout">Logout</a></li>
 				</ul>
 			</div>
 		</div>
@@ -77,41 +68,38 @@ body {
 						<th>deleted</th>
 						<th>admin</th>
 					</tr>
-					<c:forEach items="${users}" var="u">
-						<tr>
-							<th>
-								${u.username} 
-								<%-- <a href="javascript:void(0)" onclick="edit('${u.id}')">(edit)</a> --%>
-								<!-- <a href="javascript:void(0)" class="edituser">(edit)</a> --> 
+					
+          				
+					
+						<tr th:each="u : ${users}">
+							<th th:text="${u.username}">
 								<button class="btn btn-primary btn-xs" data-toggle="modal" data-target="#useredit_${u.id}">Edit</button>								
-								<input type="text" value="${u.id}" class="id hidden">
-								<input type="text" value="${u.username}" class="username hidden">
-								<input type="text" value="${u.created}" class="hidden">
-								<input type="text" value="${u.deleted}" class="deleted hidden">
-								<input type="text" value="${u.admin}" class="admin hidden">
+								<input type="text" value="${u.id}" class="id hidden" />
+								<input type="text" value="${u.username}" class="username hidden" />
+								<input type="text" value="${u.created}" class="hidden" />
+								<input type="text" value="${u.deleted}" class="deleted hidden" />
+								<input type="text" value="${u.admin}" class="admin hidden" />
 							</th>
 							<th>
-								<c:choose>
-									<c:when test="${u.photos > 0}">     										       									
-										<a class="btn btn-primary btn-xs" href="/lytra/dashboard/user/${u.id}">View Photos (${u.photos})</a>
-   									 </c:when>
-									
-									<c:otherwise>
-       									 No Photos
-   									</c:otherwise>
-								</c:choose>
-								<a class="btn btn-primary btn-xs" href="/lytra/dashboard/user/upload/${u.id}">Upload Photos</a>
+								<a class="btn btn-primary btn-xs" th:if="${u.photos} > 0" th:href="'/lytra/dashboard/user/'+${u.id}" th:text="'View Photos ' + '(' + ${u.photos} + ')'"/>
+								<p th:if="${u.photos} == 0" th:remove="tag">No Photos</p>
+								
+								<a class="btn btn-primary btn-xs" th:href="'/lytra/dashboard/user/upload/'+${u.id}" >Upload Photo</a>
+								
 							</th>
-							<th>${u.created}</th>
-							<th>${u.deleted}</th>
-							<th>${u.admin}</th>
+							<th th:text="${u.created}" />
+							<th th:text="${u.deleted}" />
+							<th th:text="${u.admin}" />
 						</tr>
-					</c:forEach>
+					
+					
+					
+					
 				</table>
 				<button class="btn btn-warning" data-toggle="modal" data-target="#createuser">Add User</button>
 				
 
-				<!------------------ Modals  ------------------------------------->
+				<!-- Modals -->
 
 
 				<!-- User edits -->
@@ -163,7 +151,7 @@ body {
 					</div>
 				</c:forEach>
 				
-				<!-------------------------- create user modal -------------------------------->
+				<!-- create user modal -->
 				<div class="modal fade" id="createuser" tabindex="-1"
 					role="dialog" aria-labelledby="createuser" aria-hidden="true">
 					<div class="modal-dialog">
@@ -202,7 +190,7 @@ body {
 						</div>
 					</div>
 				</div>
-				<!---------------------------------------------------------------------------->
+				
 				
 				
 			</div>
