user photos thymeleaf

--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -62,11 +62,9 @@
 							<ul class="nav navbar-nav">
 
 								<!-- <li><a href="#">Logged in as: ${sessionScope.USER_OBJECT.username}</a></li> -->
-								<li><a href="#" th:if="${session.USER_OBJECT} != null"
-									th:text="${session.USER_OBJECT.username}">Logged in as : </a></li>
+								<li><a href="#" th:if="${session.USER_OBJECT} != null" th:text="${session.USER_OBJECT.username}">Logged in as : </a></li>
 								<!-- <p th:if="${session.USER_OBJECT} != null" th:text="${session.USER_OBJECT.admin}" />  -->
-								<li class="active" th:if="${session.USER_OBJECT} != null"><a
-									href="/logout">Logout</a></li>
+								<li class="active" th:if="${session.USER_OBJECT} != null"><a href="/logout">Logout</a></li>
 
 							</ul>
 							<c:if test="${sessionScope.USER_OBJECT eq null}">
