--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -175,7 +175,7 @@
 </div> -->
 				<!-- main -->
 				<div class="column col-sm-10" id="main">
-		<!-- 			<ul class="cb-slideshow">
+				<ul class="cb-slideshow">
 						<li><span>Image 01</span>
 							<div>
 								<h3>re·lax·a·tion</h3>
@@ -200,7 +200,7 @@
 							<div>
 								<h3>se·ren·i·ty</h3>
 							</div></li>
-					</ul> -->
+					</ul> 
 					<!-- /padding -->
 					<div class="padding">
 						<!-- body content here -->
