--- a/src/main/webapp/WEB-INF/templates/userphotos.html
+++ b/src/main/webapp/WEB-INF/templates/userphotos.html
@@ -90,11 +90,10 @@ body {
 						<div class="modal-body">
 							Are you sure you want to delete this photo? This cannot be undone.
 							 <div class="modal-footer">
-								
-								<form:form class="form-horizontal" role="form" method="POST" action="/dashboard/delete/photo/${c}">
+								<form action="#" th:action="@{/dashboard/delete/photo/}+${c}" th:object="${user}" method="POST" role="form" class="form-horizontal">						
 									<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>					
 									<button type="submit" class="btn btn-danger">Delete</button>
-								</form:form>
+								</form>
 							</div>
 						</div>
 					</div>
