--- a/src/main/webapp/WEB-INF/templates/userupload.html
+++ b/src/main/webapp/WEB-INF/templates/userupload.html
@@ -68,12 +68,12 @@ body {
 		
 	
 				<div class="col-md-12">
-					<div class="well">Uploading photos for user: <strong>${user.username}</strong></div>
+					<div class="well" >Uploading photos for user: <strong th:text="${session.USER_OBJECT.username}">${user.username}</strong></div>					
 					<div style="border-color:black">
-					<form:form commandName="user" id="photodropzone" class="dropzone" role="form" method="POST" enctype="multipart/form-data" action="/upload">
-						<form:input path="id" class="hidden"/>
-						
-					</form:form>
+					
+					<form action="#" th:action="@{/upload}" th:object="${user}" method="post" role="form" enctype="multipart/form-data" id="photodropzone" class="dropzone">						
+						<input th:field="*{id}" path="id" class="hidden" />
+					</form>
 							
 					</div>	
 				</div>
