--- a/src/main/webapp/WEB-INF/templates/dashboard.html
+++ b/src/main/webapp/WEB-INF/templates/dashboard.html
@@ -40,11 +40,9 @@ body {
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#">Dashboard</a></li>
-					<li><a href="#" th:if="${session.USER_OBJECT} != null"
-									th:text="${session.USER_OBJECT.username}">Logged in as : </a></li>
-								<!-- <p th:if="${session.USER_OBJECT} != null" th:text="${session.USER_OBJECT.admin}" />  -->
-								<li class="active" th:if="${session.USER_OBJECT} != null"><a
-									href="/logout">Logout</a></li>
+					<li><a href="#" th:if="${session.USER_OBJECT} != null" th:text="'Welcome : '+${session.USER_OBJECT.username}" /></li>
+						<!-- <p th:if="${session.USER_OBJECT} != null" th:text="${session.USER_OBJECT.admin}" />  -->
+					<li class="active" th:if="${session.USER_OBJECT} != null"><a href="/logout">Logout</a></li>
 				</ul>
 			</div>
 		</div>
@@ -72,8 +70,9 @@ body {
           				
 					
 						<tr th:each="u : ${users}">
-							<th th:text="${u.username}">
-								<button class="btn btn-primary btn-xs" data-toggle="modal" data-target="#useredit_${u.id}">Edit</button>								
+							<th>
+								<p th:text="${u.username}" th:remove="tag" />
+								<button class="btn btn-primary btn-xs" data-toggle="modal" th:attr="data-target='#useredit_'+${u.id}">Edit</button>								
 								<input type="text" value="${u.id}" class="id hidden" />
 								<input type="text" value="${u.username}" class="username hidden" />
 								<input type="text" value="${u.created}" class="hidden" />
@@ -81,7 +80,7 @@ body {
 								<input type="text" value="${u.admin}" class="admin hidden" />
 							</th>
 							<th>
-								<a class="btn btn-primary btn-xs" th:if="${u.photos} > 0" th:href="'/lytra/dashboard/user/'+${u.id}" th:text="'View Photos ' + '(' + ${u.photos} + ')'"/>
+								<a class="btn btn-primary btn-xs" th:if="${u.photos} > 0" th:href="'/lytra/dashboard/user/' + ${u.id}" th:text="'View Photos ' + '(' + ${u.photos} + ')'"/>
 								<p th:if="${u.photos} == 0" th:remove="tag">No Photos</p>
 								
 								<a class="btn btn-primary btn-xs" th:href="'/lytra/dashboard/user/upload/'+${u.id}" >Upload Photo</a>
@@ -103,8 +102,9 @@ body {
 
 
 				<!-- User edits -->
-				<c:forEach items="${users}" var="u" varStatus="loop">
-					<div class="modal fade" id="useredit_${u.id}" tabindex="-1"	role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+				
+				<div th:each="u : ${users}" th:remove="tag" >
+					<div class="modal fade" th:id="'useredit_'+${u.id}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 						<div class="modal-dialog">
 							<div class="modal-content">
 								<div class="modal-header">
@@ -113,47 +113,44 @@ body {
 									</button>
 									<h4 class="modal-title" id="myModalLabel">Edit User</h4>
 								</div>
-								<form:form class="form-horizontal" role="form" method="POST" action="/dashboard/moduser" commandName='user'>
 								
+								<form class="form-horizontal" role="form" method="POST" th:action="@{/dashboard/moduser}" th:object='${user}'>
 								<div class="modal-body">
-										
+										<p th:text="${u}"/>
 										<div class="form-group">
 											<label for="name" class="col-md-3">User</label>
-											<div class="col-md-9">
-												${u.username}
-											</div>
+											<div class="col-md-9" th:text="${u.username}" />
 										</div>
 										<div class="form-group">
 											<label for="name" class="col-md-3">Admin</label>
 											<div class="col-md-9">
-												<form:radiobutton path="admin" value="true" /> true
-												<form:radiobutton path="admin" value="false" /> false
+												<input type="radio" th:field="*{admin}" value="true" th:text="true" th:attr="checked='checked'"/> 
+												<input type="radio" th:field="*{admin}" value="false" th:text="not checked" />
 											</div>
 										</div>
 										<div class="form-group">
 											<label for="name" class="col-md-3">Deleted</label>
 											<div class="col-md-9">
-												<form:radiobutton path="deleted" value="true" /> true
-												<form:radiobutton path="deleted" value="false" /> false												
+												<input type="radio" th:field="*{deleted}" value="true" th:text="true" /> 
+												<!-- <input type="radio" th:field="*{deleted}" value="false" th:text="false" /> -->																								
 											</div>
 										</div>		 							
 																
 								
-								</div>
-								<form:input class="hidden" value="${u.id}" path="id"/>
+								</div>								
+								<input th:field="*{id}" path="id" class="hidden" />
 								<div class="modal-footer">
 									<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 									<button type="submit" class="btn btn-primary">Save changes</button>
 								</div>
-								</form:form>
+								</form>
 							</div>
 						</div>
 					</div>
-				</c:forEach>
+				</div>
 				
 				<!-- create user modal -->
-				<div class="modal fade" id="createuser" tabindex="-1"
-					role="dialog" aria-labelledby="createuser" aria-hidden="true">
+				<div class="modal fade" id="createuser" tabindex="-1" role="dialog" aria-labelledby="createuser" aria-hidden="true">
 					<div class="modal-dialog">
 						<div class="modal-content">
 							<div class="modal-header">
@@ -163,29 +160,26 @@ body {
 								<h4 class="modal-title" id="myModalLabel">Edit User</h4>
 							</div>
 							<div class="modal-body">
-								<form:form class="form-horizontal" role="form" method="POST"
-									action="/dashboard/createuser" commandName="user">
+								
+								<form class="form-horizontal" role="form" method="POST" th:action="@{/dashboard/createuser}" th:object="${user}">
 									<div class="form-group">
 										<label for="username" class="col-md-3">username</label>
 										<div class="col-md-9">
-											<form:input path="username" class="form-control"
-												id="username" placeholder="username" />
+											<input type="text" th:field="*{username}" class="form-control" id="username" placeholder="username" />
 										</div>
 									</div>
 									<div class="form-group">
 										<label for="password" class="col-md-3">password</label>
-										<div class="col-md-9">
-											<form:input path="password" class="form-control"
-												id="password" placeholder="password" />
+										<div class="col-md-9">											
+											<input type="text" th:field="*{password}" class="form-control" id="password" placeholder="password" />
 										</div>
 									</div>
 									<div class="form-group">
 										<div class="col-md-3 col-md-offset-3">
-											<button type="submit" class="btn btn-danger">Create
-												User</button>
+											<button type="submit" class="btn btn-danger">Create User</button>
 										</div>
 									</div>
-								</form:form>
+								</form>
 							</div>
 						</div>
 					</div>
