--- a/src/main/webapp/WEB-INF/templates/photos.html
+++ b/src/main/webapp/WEB-INF/templates/photos.html
@@ -175,38 +175,9 @@
 </div> -->
 				<!-- main -->
 				<div class="column col-sm-10" id="main">
-				<ul class="cb-slideshow">
-						<li><span>Image 01</span>
-							<div>
-								<h3>re·lax·a·tion</h3>
-							</div></li>
-						<li><span>Image 02</span>
-							<div>
-								<h3>qui·e·tude</h3>
-							</div></li>
-						<li><span>Image 03</span>
-							<div>
-								<h3>bal·ance</h3>
-							</div></li>
-						<li><span>Image 04</span>
-							<div>
-								<h3>e·qua·nim·i·ty</h3>
-							</div></li>
-						<li><span>Image 05</span>
-							<div>
-								<h3>com·po·sure</h3>
-							</div></li>
-						<li><span>Image 06</span>
-							<div>
-								<h3>se·ren·i·ty</h3>
-							</div></li>
-					</ul> 
-					<!-- /padding -->
-					<div class="padding">
-						<!-- body content here -->
-						<!-- /body content here -->
+					<div th:each="c : ${files}" class="col-sm-offset-3 col-md-offset-2 col-md-9">
+						<img th:src="'/lytra/photo/'+${c}" class="img-responsive img-thumbnail" alt="Responsive image" />				
 					</div>
-					<!-- /padding -->
 				</div>
 				<!-- /main -->
 			</div>
