--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -108,7 +108,7 @@ footer .glyphicon:hover {
 
   <!--  BODY PAGE CONTENT -->
   <!-- navigation panel -->
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -137,13 +137,21 @@ footer .glyphicon:hover {
   <!-- first section - Home -->
 <div id="home" class="home">
   <div class="text-vcenter">
-    <h1>Hello World</h1>
-    <h3>This is bootstrap-based layout</h3>
-    <a href="#about" class="btn btn-default btn-lg">Continue</a>
+    <div class="col-sm-offset-3 col-sm-6">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h2 class="panel-title">Additional information</h2>
+          </div>
+          <div class="panel-body lead">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
+          </div>
+        </div>
+      </div>
   </div>
 </div>
 <!-- /first section -->
-  <!-- second section - About -->
+
+<!-- second section - About -->
 <div id="about" class="pad-section">
   <div class="container">
     <div class="row">
@@ -158,6 +166,7 @@ footer .glyphicon:hover {
   </div>
 </div>
 <!-- /second section -->
+
   
   
   
