--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -73,7 +73,7 @@ html, body {
 }
 
 #information {
-  background: url(../images/estate.jpg) no-repeat center center fixed; 
+  background: url('1980352_713569092050669_3900100014838096590_o.jpg') no-repeat center center fixed; 
   display: table;
   height: 800px;
   position: relative;
@@ -106,38 +106,68 @@ footer .glyphicon:hover {
 </head>
 <body>
 
-  <!--  BODY PAGE CONTENT -->
-  <!-- navigation panel -->
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-main">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Your Brand Name</a>
-    </div>
+	<!--  BODY PAGE CONTENT -->
+	<!-- navigation panel -->
+	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+		<div class="container-fluid">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse"
+					data-target="#navbar-collapse-main">
+					<span class="sr-only">Toggle navigation</span> <span
+						class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">Lytra.me</a>
+			</div>
 
-    <div class="collapse navbar-collapse" id="navbar-collapse-main">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#information">Information</a></li>
-        <li><a href="#google_map">Contact</a></li>
-        <li><a href="http://www.script-tutorials.com/bootstrap-one-page-template-with-parallax-effect/">Back to tutorial</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-  
-  <!-- first section - Home -->
-<div id="home" class="home">
-  <div class="text-vcenter">
-    <div class="col-sm-offset-3 col-sm-6">
+			<div class="collapse navbar-collapse" id="navbar-collapse-main">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#home">Lytra</a></li>
+					<li><a href="#about">About</a></li>
+				</ul>
+			</div>
+			<!-- /.navbar-collapse -->
+		</div>
+		<!-- /.container-fluid -->
+	</nav>
+
+	<!-- first section - Home -->
+	<div id="home" class="home">
+		<div class="text-vcenter">
+			<div class="col-sm-offset-3 col-sm-6">
+				<div class="well" ><h2>Lytra is simple ... like a cup of tea</h2></div>
+			</div>
+		</div>
+	</div>
+	<!-- /first section -->
+
+	<!-- second section - About -->
+	<div id="about" class="pad-section" style="background-color:black; color: white;">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6">
+					<img class="img-responsive" src="logo.png" alt="" />
+				</div>
+				<div class="col-sm-6 text-center">					
+					<p class="lead">LyTra was created through an appreciation for tradition and a desire to innovate. Weddings and happiness means something different to everyone, so why not have something custom made for you?
+
+For us, it started at the moment when a tea ceremony was witness. There was so much culture ingrained in the rituals, all the colours involved in the process, and the tedious practice of following custom.
+
+The idea of old and new, coupled with the client's personality is what excited us. Whether it be through photography or wedding planning, we are here to serve you.
+
+Living in a world where we get instant gratification, Lytra is here to make that process as simple as possible. Simple... like a cup of tea.</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- /second section -->
+
+<!-- fourth section - Information -->
+<div id="information" class="pad-section">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
         <div class="panel panel-default">
           <div class="panel-heading">
             <h2 class="panel-title">Additional information</h2>
@@ -147,30 +177,23 @@ footer .glyphicon:hover {
           </div>
         </div>
       </div>
-  </div>
-</div>
-<!-- /first section -->
-
-<!-- second section - About -->
-<div id="about" class="pad-section">
-  <div class="container">
-    <div class="row">
       <div class="col-sm-6">
-        <img src="images/logo.png" alt="" />
-      </div>
-      <div class="col-sm-6 text-center">
-        <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in sem cras amet.</h2>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed interdum metus et ligula venenatis, at rhoncus nisi molestie. Pellentesque porttitor elit suscipit massa laoreet metus.</p>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h2 class="panel-title">Additional information</h2>
+          </div>
+          <div class="panel-body lead">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
-<!-- /second section -->
+<!-- /fourth section -->
 
-  
-  
-  
-  <!-- attach JavaScripts -->
+
+	<!-- attach JavaScripts -->
   <script src="//maps.google.com/maps/api/js?sensor=true"></script>
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
