--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -1,108 +1,138 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="author" content="Script Tutorials" />
-  <title>Bootstrap one-page template with Parallax effect | Script Tutorials</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+<meta charset="utf-8" />
+<meta name="author" content="Script Tutorials" />
+<title>Bootstrap one-page template with Parallax effect | Script
+	Tutorials</title>
+<meta name="viewport"
+	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-  <!-- attach CSS styles -->
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css"/>
-	
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"/>
-	<style>
-	/* general styles */
+<!-- attach CSS styles -->
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+
+<!-- Optional theme -->
+<link rel="stylesheet"
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css" />
+<link rel="stylesheet" href="css/owl.carousel.css" />
+<link rel="stylesheet" href="css/owl.theme.css" />
+<link rel="stylesheet" href="css/owl.transitions.css" />
+<style>
+/* general styles */
 html, body {
-  height: 100%;
-  width: 100%;
+	height: 100%;
+	width: 100%;
 }
 
 /* padded section */
 .pad-section {
-  padding: 50px 0;
+	padding: 50px 0;
 }
+
 .pad-section img {
-  width: 100%;
+	width: 100%;
 }
 
 /* vertical-centered text */
 .text-vcenter {
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
+	display: table-cell;
+	text-align: center;
+	vertical-align: middle;
 }
+
 .text-vcenter h1 {
-  font-size: 4.5em;
-  font-weight: 700;
-  margin: 0;
-  padding: 0;
+	font-size: 4.5em;
+	font-weight: 700;
+	margin: 0;
+	padding: 0;
 }
 
 /* additional sections */
 #home {
-  background: url('10560450_784283401645904_5101054386884725992_o.jpg') no-repeat center center fixed; 
-  display: table;
-  height: 100%;
-  position: relative;
-  width: 100%;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+	background: url('10560450_784283401645904_5101054386884725992_o.jpg')
+		no-repeat center center fixed;
+	display: table;
+	height: 100%;
+	position: relative;
+	width: 100%;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
+#gallery {
+	display: table;
+	height: 100%;
+	position: relative;
+	width: 100%;
 }
 
 #about {
+	
 }
 
 #services {
-  background-color: #306d9f;
-  color: #ffffff;
+	background-color: #00D4CD;
+	color: #ffffff;
 }
+
 #services .glyphicon {
-  border: 2px solid #FFFFFF;
-  border-radius: 50%;
-  display: inline-block;
-  font-size: 60px;
-  height: 140px;
-  line-height: 140px;
-  text-align: center;
-  vertical-align: middle;
-  width: 140px;
+	border: 2px solid #FFFFFF;
+	border-radius: 50%;
+	display: inline-block;
+	font-size: 60px;
+	height: 140px;
+	line-height: 140px;
+	text-align: center;
+	vertical-align: middle;
+	width: 140px;
 }
 
 #information {
-  background: url('1980352_713569092050669_3900100014838096590_o.jpg') no-repeat center center fixed; 
-  display: table;
-  height: 800px;
-  position: relative;
-  width: 100%;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+	background: url('1980352_713569092050669_3900100014838096590_o.jpg')
+		no-repeat center center fixed;
+	display: table;
+	height: 800px;
+	position: relative;
+	width: 100%;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
 }
+
 #information .panel {
-  opacity: 0.85;
+	opacity: 0.85;
 }
 
 #google_map {
-  height: 500px;
+	height: 500px;
 }
 
 footer {
-  padding: 20px 0;
+	padding: 20px 0;
 }
+
 footer .glyphicon {
-  color: #333333;
-  font-size: 60px;
+	color: #333333;
+	font-size: 60px;
 }
+
 footer .glyphicon:hover {
-  color: #306d9f;
+	color: #306d9f;
 }
-	
-	</style>
+
+
+
+#gallery .item img{
+	display: block;
+	width: 100%;
+	height: auto;
+}
+</style>
 </head>
 <body>
 
@@ -122,9 +152,14 @@ footer .glyphicon:hover {
 			</div>
 
 			<div class="collapse navbar-collapse" id="navbar-collapse-main">
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#home">Lytra</a></li>
+				<ul class="nav navbar-nav navbar-left">
 					<li><a href="#about">About</a></li>
+					<li><a href="#about">Services</a></li>
+					<li><a href="#about">Gallery</a></li>
+					<li><a href="#about">Blog</a></li>
+					<li><a href="#about">Contact</a></li>
+					<li><a href="#about">My Photos</a></li>
+					
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -136,68 +171,113 @@ footer .glyphicon:hover {
 	<div id="home" class="home">
 		<div class="text-vcenter">
 			<div class="col-sm-offset-3 col-sm-6">
-				<div class="well" ><h2>Lytra is simple ... like a cup of tea</h2></div>
+				<div class="welll"
+					style="color: white; background-color: rgba(0, 0, 0, 0.80); padding: 10px 10px 10px 10px;">
+					<h1>Lytra is simple...</h1>
+					<h1>like a cup of tea</h1>
+				</div>
 			</div>
 		</div>
 	</div>
 	<!-- /first section -->
 
 	<!-- second section - About -->
-	<div id="about" class="pad-section" style="background-color:black; color: white;">
+	<div id="about" class="pad-section"
+		style="background-color: black; color: white;">
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-6">
 					<img class="img-responsive" src="logo.png" alt="" />
 				</div>
-				<div class="col-sm-6 text-center">					
-					<p class="lead">LyTra was created through an appreciation for tradition and a desire to innovate. Weddings and happiness means something different to everyone, so why not have something custom made for you?
+				<div class="col-sm-6 text-centerR">
+					<div class="lead">
+						<h2>LyTra was created through an appreciation for tradition
+							and a desire to innovate. Weddings and happiness means something
+							different to everyone, so why not have something custom made for
+							you?</h2>
 
-For us, it started at the moment when a tea ceremony was witness. There was so much culture ingrained in the rituals, all the colours involved in the process, and the tedious practice of following custom.
-
-The idea of old and new, coupled with the client's personality is what excited us. Whether it be through photography or wedding planning, we are here to serve you.
-
-Living in a world where we get instant gratification, Lytra is here to make that process as simple as possible. Simple... like a cup of tea.</p>
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	<!-- /second section -->
 
-<!-- fourth section - Information -->
-<div id="information" class="pad-section">
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-6">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h2 class="panel-title">Additional information</h2>
-          </div>
-          <div class="panel-body lead">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h2 class="panel-title">Additional information</h2>
-          </div>
-          <div class="panel-body lead">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed hendrerit adipiscing blandit. Aliquam placerat, velit a fermentum fermentum, mi felis vehicula justo, a dapibus quam augue non massa. Duis euismod, augue et tempus consequat, lorem mauris porttitor quam, consequat ultricies mauris mi a metus. Phasellus congue, leo sed ultricies tristique, nunc libero tempor ligula, at varius mi nibh in nisi. Aliquam erat volutpat. Maecenas rhoncus, neque facilisis rhoncus tempus, elit ligula varius dui, quis amet. 
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- /fourth section -->
+
+
+	<!-- /first section -->
+
+
+	<!-- fourth section - Information -->
+	<div id="information" class="pad-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-6">
+					<div class="panel panel-default">
+						<div class="panel-body lead">For us, it started at the
+							moment when a tea ceremony was witness. There was so much culture
+							ingrained in the rituals, all the colours involved in the
+							process, and the tedious practice of following custom. The idea
+							of old and new, coupled with the client's personality is what
+							excited us. Whether it be through photography or wedding
+							planning, we are here to serve you.</div>
+					</div>
+				</div>
+				<div class="col-sm-6">
+					<div class="panel panel-default">
+						<div class="panel-body lead">
+							<p>Living in a world where we get instant gratification,
+								Lytra is here to make that process as simple as possible.
+								Simple... like a cup of tea.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- /fourth section -->
+	<!-- fifth section -->
+	<div id="services" class="pad-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-12 text-center">
+					<h3>(513) 445-9872</h3>
+					<h4>staff@lytra.me</h4>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- /fifth section -->
+
+
+
+	<!-- footer -->
+	<footer>
+		<hr />
+		<div class="container">
+			<p class="text-right">Copyright &copy; Lytra 2015</p>
+		</div>
+	</footer>
+	<!-- /footer -->
 
 
 	<!-- attach JavaScripts -->
-  <script src="//maps.google.com/maps/api/js?sensor=true"></script>
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <!-- Latest compiled and minified JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+	<script src="//maps.google.com/maps/api/js?sensor=true"></script>
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script
+		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<!-- Latest compiled and minified JavaScript -->
+	<script
+		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+	<script src="js/owl.carousel.min.js"></script>
+		<script>
+		$(function() {
+		  $("#gallery").owlCarousel({
+			  slideSpeed: 300,
+			  paginationSpeed: 400,
+			  singleItem: true
+		  });
+		});
+	</script>
 </body>
 </html>
