--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -75,7 +75,7 @@ html, body {
 }
 
 #services {
-	background-color: #00D4CD;
+	background-color: #4AABFF;
 	color: #ffffff;
 }
 
@@ -132,6 +132,18 @@ footer .glyphicon:hover {
 	width: 100%;
 	height: auto;
 }
+
+.foobar{
+  color: #ffffff;
+    font-family: "Gotham A","Gotham B",Arial;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    letter-spacing: 3px;
+    line-height: 23px;
+    margin: 0 0 30px;
+    text-transform: uppercase;
+}
 </style>
 </head>
 <body>
@@ -158,7 +170,7 @@ footer .glyphicon:hover {
 					<li><a href="#about">Gallery</a></li>
 					<li><a href="#about">Blog</a></li>
 					<li><a href="#about">Contact</a></li>
-					<li><a href="#about">My Photos</a></li>
+					<li><a href="#about">Retrieve Photos</a></li>
 					
 				</ul>
 			</div>
@@ -171,10 +183,9 @@ footer .glyphicon:hover {
 	<div id="home" class="home">
 		<div class="text-vcenter">
 			<div class="col-sm-offset-3 col-sm-6">
-				<div class="welll"
-					style="color: white; background-color: rgba(0, 0, 0, 0.80); padding: 10px 10px 10px 10px;">
+				<div class="welll clearfix" style="color: white; background-color: rgba(0, 0, 0, 0.80); padding: 10px 10px 10px 10px;">																			
 					<h1>Lytra is simple...</h1>
-					<h1>like a cup of tea</h1>
+					<h1>like a cup of tea</h1>				
 				</div>
 			</div>
 		</div>
@@ -239,12 +250,29 @@ footer .glyphicon:hover {
 	<!-- fifth section -->
 	<div id="services" class="pad-section">
 		<div class="container">
-			<div class="row">
-				<div class="col-sm-12 text-center">
-					<h3>(513) 445-9872</h3>
-					<h4>staff@lytra.me</h4>
-				</div>
+			<div class="text-center pull-left" style="margin:20px;">
+				<img class="img-responsive center-block" src="img/alpha/lytra-cup.png" style="max-width: 300px;"/>	
+			</div>	
+			<div class="text-center pull-left">	
+				<h4 class="foobar">Stay connected with Lytra</h4> 
+				<img src="img/alpha/facebook.png" style="max-width:50px;"/>	 					
+				<img src="img/alpha/g+icon.png" style="max-width:50px;"/>
+				<img src="img/alpha/twitter-bird-white-on-blue.png" style="max-width:50px;"/>
+				<img src="img/alpha/pinterest_badge_white.png" style="max-width:50px;"/>
 			</div>
+			<div class="text-center pull-left">
+				<h4>For us, it started at the moment when a tea ceremony was
+					witness. There was so much culture ingrained in the rituals, all
+					the colours involved in the process, and the tedious practice of
+					following custom. The idea of old and new, coupled with the
+					client's personality is what excited us. Whether it be through
+					photography or wedding planning, we are here to serve you.
+				</h4>
+			</div>
+
+
+
+
 		</div>
 	</div>
 	<!-- /fifth section -->
@@ -255,14 +283,14 @@ footer .glyphicon:hover {
 	<footer>
 		<hr />
 		<div class="container">
+			
 			<p class="text-right">Copyright &copy; Lytra 2015</p>
 		</div>
 	</footer>
 	<!-- /footer -->
 
 
-	<!-- attach JavaScripts -->
-	<script src="//maps.google.com/maps/api/js?sensor=true"></script>
+	
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script
 		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
