--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -57,7 +57,32 @@ body {
 
 			</div>
 			<div class="col-sm-offset-3 col-md-offset-2 col-md-9">
-				<table class="table table-striped table-bordered">
+			<table class="table table-striped table-bordered">
+					<tr>
+						<th>Client id</th>
+						<th>Client name</th>
+						<th>created</th>
+						<th>deleted</th>
+						<th>Access code</th>
+						<th>Access code expired</th>
+						<th>Access code created</th>										
+						<th>URL</th>
+					</tr>
+					<tr th:each="c : ${clients}">
+						<th th:text="${c.id}" />
+						<th th:text="${c.name}" />
+						<th th:text="${c.created}" />						
+						<th th:text="${c.deleted}" />
+						<th th:text="${c.accessCode.code}" />
+						<th th:text="${c.accessCode.expired}" />
+						<th th:text="${c.accessCode.created}" />
+						<th th:text="${baseurl}+'photos/'+${c.accessCode.code}" />						
+					</tr>					
+			</table>
+			
+			
+			
+			<table class="table table-striped table-bordered">
 					<tr>
 						<th>Username</th>
 						<th>Photos</th>
